Version 20     2015-March-25

--Added a chime for amulet-holder on the display-stake screen when an amulet
  game is ready for them.




Version 19     Live Server Fixes

--Fixed bug that prevented next batch of amulets from being handed out.

--Added an amulet_summary page that lists all live amulets.

--Fixed bug in amulet_summary where holding user is listed twice if they lead.



Version 19     2015-March-25

--Added minutes-left display for amulet holder on leaderboard.

--Mirrored tick-down amulet score display on WAITING FOR OPPONENT page.

--Fixed decrement of users_to_skip_on_drop to only decrement one amulet at a
  time instead of all in parallel.

--Bounded users_to_skip when handing out dropped amulets at 10 max, and changed
  it to count only non-amulet games when setting users_to_skip.

--Floating amulets never handed out if there are unpaired amulet games waiting
  or if the number of active players is less than 2 * N + 3, where N is the
  number of held amulets.

--Added display of randomly-matched amulet stakes to amulet holder before the
  start of an amulet game.

--Fixed so that hitting CANCEL button on WAITING screen never results in a
  leave penalty, regardless of network delays (thanks Josh C). 





Version 18     2015-March-20

--Fixed a game-breaking bug in game results display screen (thanks claspa).




Version 17     2015-March-20

--Fixed failure to fetch amulet image and potential crash caused by this 
  failure (thanks ..)

--Fixed to clear NON-AMULET tool tip from CREATE button after dropping an
  amulet (thanks ..)

--Added held time and penalty rate to protocol so that client can display a
  realtime update of held-amulet score decay.

--Added a DROP AMULET button.






Version 16     Live Server Fixes

--Added retry-based work-around for deadlock in keepGameAlive.

--Fixed to go back into transaction after pulling a player out of a joined game
  and into an amulet game.
